<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:title="@string/ic_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_history"
        android:title="@string/ic_history"
        android:icon="@drawable/ic_history"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_puzzle"
        android:title="@string/ic_puzzle"
        android:icon="@drawable/ic_puzzle"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_profile"
        android:title="@string/ic_profile"
        android:icon="@drawable/ic_account"
        app:showAsAction="ifRoom"/>
</menu>