<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_marginBottom="20dp"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_course_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduction"
            android:fontFamily="@font/nunito"
            android:textSize="14sp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/tv_level_course_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:fontFamily="@font/nunito"
            android:textSize="12sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_course"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/button_blue"
        android:text="@string/start"
        android:fontFamily="@font/nunito"
        android:textAllCaps="false"
        android:layout_marginEnd="28dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"/>

    </RelativeLayout>






</androidx.cardview.widget.CardView>