<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/blueaccent_background"
    tools:context=".fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_name_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hi_name"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:fontFamily="@font/nunito_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="28dp"
        android:layout_marginStart="28dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_would_you_like_to_learn_today"
        android:fontFamily="@font/nunito"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_name_home"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="28dp"/>

    <RelativeLayout
        android:id="@+id/choose_language_home"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/card_gradient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="115dp">
        <TextView
            android:id="@+id/tv_learn_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_learn_path"
            android:textColor="@android:color/white"
            android:fontFamily="@font/nunito"
            android:textSize="12sp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="17dp"/>
        <TextView
            android:id="@+id/tv_choosed_language_home"
            android:layout_below="@id/tv_learn_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bahasa"
            android:textColor="@android:color/white"
            android:fontFamily="@font/nunito"
            android:textSize="18sp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="5dp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blueaccent_background"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="260dp"/>


    <SearchView
        android:id="@+id/search_choose_language_home"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/search_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="243dp"
        android:queryHint="Search language"
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        />

    <LinearLayout
        android:id="@+id/content_course_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_choose_language_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

    <TextView
        android:id="@+id/tv_latest_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latest_course"
        android:fontFamily="@font/nunito_bold"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="28dp"
        app:layout_constraintTop_toBottomOf="@id/search_choose_language_home"
        android:layout_marginTop="28dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_latest_course_home"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_latest_course"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="28dp"
        tools:listitem="@layout/item_latest_course"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/tv_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course"
        android:fontFamily="@font/nunito_bold"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="28dp"
        app:layout_constraintTop_toBottomOf="@id/rv_latest_course_home"
        android:layout_marginTop="28dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_course_home"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_course"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="28dp"
        tools:listitem="@layout/item_course"
        android:visibility="visible"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_course_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_choose_language_home"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="28dp"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:layout_width="228dp"
            android:layout_height="139dp"
            android:background="@drawable/no_course" />

        <TextView
            android:layout_margin="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_course_text"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/nunito"/>


    </LinearLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>